--- a/client/account.ui
+++ b/client/account.ui
@@ -86,7 +86,7 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0
     </item>
     <item row="0" column="3">
      <property name="text">
-      <string/>
+      <string>12.000</string>
      </property>
     </item>
     <item row="1" column="0">
@@ -106,7 +106,7 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0
     </item>
     <item row="1" column="3">
      <property name="text">
-      <string/>
+      <string>-2.500</string>
      </property>
     </item>
     <item row="2" column="0">
@@ -124,6 +124,11 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0
       <string>+0,07</string>
      </property>
     </item>
+    <item row="2" column="3">
+     <property name="text">
+      <string>280</string>
+     </property>
+    </item>
     <item row="3" column="0">
      <property name="text">
       <string>d</string>
@@ -137,6 +142,11 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0
     <item row="3" column="2">
      <property name="text">
       <string>+0,4</string>
+     </property>
+    </item>
+    <item row="3" column="3">
+     <property name="text">
+      <string>8.000</string>
      </property>
     </item>
    </widget>
@@ -157,7 +167,7 @@ font: 16pt &quot;Segoe UI&quot;;</string>
      <string>Konto:</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber">
+   <widget class="QLCDNumber" name="kontostand">
     <property name="geometry">
      <rect>
       <x>690</x>
