fix: unnötige Dateinen gelöscht Feat: Achivements tab (generellles design)

--- a/client/form.ui
+++ b/client/form.ui
@@ -27,7 +27,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -204,6 +204,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
        </rect>
       </property>
      </widget>
+    </widget>
+    <widget class="QWidget" name="tab_5">
+     <attribute name="title">
+      <string>Achievements</string>
+     </attribute>
     </widget>
    </widget>
    <widget class="QWidget" name="widget_4" native="true">
