feat: Window Connection

--- a/client/login.ui
+++ b/client/login.ui
@@ -171,6 +171,9 @@ color:black;
 font: 10pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);</string>
    </property>
+   <property name="inputMethodHints">
+    <set>Qt::InputMethodHint::ImhNoAutoUppercase|Qt::InputMethodHint::ImhNoPredictiveText|Qt::InputMethodHint::ImhSensitiveData</set>
+   </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
