--- a/client/form.ui
+++ b/client/form.ui
@@ -47,7 +47,7 @@ color: rgb(0, 0, 0);</string>
      <enum>QTabWidget::TabShape::Triangular</enum>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -236,242 +236,6 @@ background-color: rgb(85, 170, 127);</string>
         </widget>
        </item>
       </layout>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Profil">
-     <attribute name="title">
-      <string>Profil</string>
-     </attribute>
-     <widget class="QTableWidget" name="tableWidget_7">
-      <property name="geometry">
-       <rect>
-        <x>790</x>
-        <y>290</y>
-        <width>271</width>
-        <height>141</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 14pt &quot;Segoe UI&quot;;
-color: rgb(0, 0, 0);
-background-color: rgb(64, 65, 66);</string>
-      </property>
-      <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>133</number>
-      </attribute>
-      <row>
-       <property name="text">
-        <string/>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string/>
-       </property>
-      </row>
-      <column>
-       <property name="text">
-        <string>Achivments</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Coins</string>
-       </property>
-      </column>
-      <item row="0" column="0">
-       <property name="text">
-        <string>Erste schritte</string>
-       </property>
-      </item>
-      <item row="0" column="1">
-       <property name="text">
-        <string>1.000</string>
-       </property>
-      </item>
-      <item row="1" column="0">
-       <property name="text">
-        <string>A</string>
-       </property>
-      </item>
-      <item row="1" column="1">
-       <property name="text">
-        <string>2.000</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QLabel" name="label_10">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>30</y>
-        <width>311</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 28pt &quot;Segoe UI&quot;;
-color: rgb(0, 0, 0);
-background-color:transparent;
-text-decoration: underline;
-
-</string>
-      </property>
-      <property name="text">
-       <string>Your Account</string>
-      </property>
-     </widget>
-     <widget class="QTableWidget" name="infos">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>190</y>
-        <width>661</width>
-        <height>511</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 14pt &quot;Segoe UI&quot;;
-color: rgb(0, 0, 0);
-background-color: rgb(64, 65, 66);
-</string>
-      </property>
-      <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>160</number>
-      </attribute>
-      <row/>
-      <row/>
-      <row/>
-      <row/>
-      <column>
-       <property name="text">
-        <string>Crypto</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Dein Invest</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Aktueller Kurs</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Aktueller Profit</string>
-       </property>
-      </column>
-      <item row="0" column="0">
-       <property name="text">
-        <string>a</string>
-       </property>
-      </item>
-      <item row="0" column="1">
-       <property name="text">
-        <string>30.000</string>
-       </property>
-      </item>
-      <item row="0" column="2">
-       <property name="text">
-        <string>+0,4</string>
-       </property>
-      </item>
-      <item row="0" column="3">
-       <property name="text">
-        <string>12.000</string>
-       </property>
-      </item>
-      <item row="1" column="0">
-       <property name="text">
-        <string>b</string>
-       </property>
-      </item>
-      <item row="1" column="1">
-       <property name="text">
-        <string>5.000</string>
-       </property>
-      </item>
-      <item row="1" column="2">
-       <property name="text">
-        <string>-0,2</string>
-       </property>
-      </item>
-      <item row="1" column="3">
-       <property name="text">
-        <string>-2.500</string>
-       </property>
-      </item>
-      <item row="2" column="0">
-       <property name="text">
-        <string>c</string>
-       </property>
-      </item>
-      <item row="2" column="1">
-       <property name="text">
-        <string>4.000</string>
-       </property>
-      </item>
-      <item row="2" column="2">
-       <property name="text">
-        <string>+0,07</string>
-       </property>
-      </item>
-      <item row="2" column="3">
-       <property name="text">
-        <string>280</string>
-       </property>
-      </item>
-      <item row="3" column="0">
-       <property name="text">
-        <string>d</string>
-       </property>
-      </item>
-      <item row="3" column="1">
-       <property name="text">
-        <string>20.000</string>
-       </property>
-      </item>
-      <item row="3" column="2">
-       <property name="text">
-        <string>+0,4</string>
-       </property>
-      </item>
-      <item row="3" column="3">
-       <property name="text">
-        <string>8.000</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QLCDNumber" name="kontostand">
-      <property name="geometry">
-       <rect>
-        <x>840</x>
-        <y>170</y>
-        <width>211</width>
-        <height>50</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_11">
-      <property name="geometry">
-       <rect>
-        <x>890</x>
-        <y>110</y>
-        <width>101</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 0);
-font: 16pt &quot;Segoe UI&quot;;
-background-color: transparent;
-</string>
-      </property>
-      <property name="text">
-       <string>Konto:</string>
-      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
@@ -1026,75 +790,6 @@ background-color: transparent;</string>
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="tab_4">
-     <attribute name="title">
-      <string>Guides/Tutorial</string>
-     </attribute>
-     <widget class="QWidget" name="widget_5" native="true">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>89</y>
-        <width>550</width>
-        <height>591</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(64, 65, 66);</string>
-      </property>
-     </widget>
-     <widget class="QWidget" name="widget_7" native="true">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>89</y>
-        <width>550</width>
-        <height>591</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(64, 65, 66);</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_9">
-      <property name="geometry">
-       <rect>
-        <x>680</x>
-        <y>30</y>
-        <width>221</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 16pt &quot;Segoe UI&quot;;
-text-decoration: underline;
-color: rgb(0, 0, 0);
-background-color: transparent;</string>
-      </property>
-      <property name="text">
-       <string>Tutorial</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_8">
-      <property name="geometry">
-       <rect>
-        <x>110</x>
-        <y>30</y>
-        <width>221</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 16pt &quot;Segoe UI&quot;;
-text-decoration: underline;
-color: rgb(0, 0, 0);
-background-color: transparent;</string>
-      </property>
-      <property name="text">
-       <string>Guides</string>
-      </property>
-     </widget>
-    </widget>
     <widget class="QWidget" name="tab_5">
      <attribute name="title">
       <string>Achievements</string>
@@ -1167,6 +862,311 @@ color: rgb(0, 170, 127);</string>
       </item>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>Guides/Tutorial</string>
+     </attribute>
+     <widget class="QWidget" name="widget_5" native="true">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>89</y>
+        <width>550</width>
+        <height>591</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(64, 65, 66);</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="widget_7" native="true">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>89</y>
+        <width>550</width>
+        <height>591</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(64, 65, 66);</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>680</x>
+        <y>30</y>
+        <width>221</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 16pt &quot;Segoe UI&quot;;
+text-decoration: underline;
+color: rgb(0, 0, 0);
+background-color: transparent;</string>
+      </property>
+      <property name="text">
+       <string>Tutorial</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>30</y>
+        <width>221</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 16pt &quot;Segoe UI&quot;;
+text-decoration: underline;
+color: rgb(0, 0, 0);
+background-color: transparent;</string>
+      </property>
+      <property name="text">
+       <string>Guides</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="Profil">
+     <attribute name="title">
+      <string>Profil</string>
+     </attribute>
+     <widget class="QTableWidget" name="tableWidget_7">
+      <property name="geometry">
+       <rect>
+        <x>790</x>
+        <y>290</y>
+        <width>271</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);
+background-color: rgb(64, 65, 66);</string>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>133</number>
+      </attribute>
+      <row>
+       <property name="text">
+        <string/>
+       </property>
+      </row>
+      <row>
+       <property name="text">
+        <string/>
+       </property>
+      </row>
+      <column>
+       <property name="text">
+        <string>Achivments</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Coins</string>
+       </property>
+      </column>
+      <item row="0" column="0">
+       <property name="text">
+        <string>Erste schritte</string>
+       </property>
+      </item>
+      <item row="0" column="1">
+       <property name="text">
+        <string>1.000</string>
+       </property>
+      </item>
+      <item row="1" column="0">
+       <property name="text">
+        <string>A</string>
+       </property>
+      </item>
+      <item row="1" column="1">
+       <property name="text">
+        <string>2.000</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>30</y>
+        <width>311</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 28pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);
+background-color:transparent;
+text-decoration: underline;
+
+</string>
+      </property>
+      <property name="text">
+       <string>Your Account</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="infos">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>190</y>
+        <width>661</width>
+        <height>511</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);
+background-color: rgb(64, 65, 66);
+</string>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>160</number>
+      </attribute>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <column>
+       <property name="text">
+        <string>Crypto</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Dein Invest</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Aktueller Kurs</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Aktueller Profit</string>
+       </property>
+      </column>
+      <item row="0" column="0">
+       <property name="text">
+        <string>a</string>
+       </property>
+      </item>
+      <item row="0" column="1">
+       <property name="text">
+        <string>30.000</string>
+       </property>
+      </item>
+      <item row="0" column="2">
+       <property name="text">
+        <string>+0,4</string>
+       </property>
+      </item>
+      <item row="0" column="3">
+       <property name="text">
+        <string>12.000</string>
+       </property>
+      </item>
+      <item row="1" column="0">
+       <property name="text">
+        <string>b</string>
+       </property>
+      </item>
+      <item row="1" column="1">
+       <property name="text">
+        <string>5.000</string>
+       </property>
+      </item>
+      <item row="1" column="2">
+       <property name="text">
+        <string>-0,2</string>
+       </property>
+      </item>
+      <item row="1" column="3">
+       <property name="text">
+        <string>-2.500</string>
+       </property>
+      </item>
+      <item row="2" column="0">
+       <property name="text">
+        <string>c</string>
+       </property>
+      </item>
+      <item row="2" column="1">
+       <property name="text">
+        <string>4.000</string>
+       </property>
+      </item>
+      <item row="2" column="2">
+       <property name="text">
+        <string>+0,07</string>
+       </property>
+      </item>
+      <item row="2" column="3">
+       <property name="text">
+        <string>280</string>
+       </property>
+      </item>
+      <item row="3" column="0">
+       <property name="text">
+        <string>d</string>
+       </property>
+      </item>
+      <item row="3" column="1">
+       <property name="text">
+        <string>20.000</string>
+       </property>
+      </item>
+      <item row="3" column="2">
+       <property name="text">
+        <string>+0,4</string>
+       </property>
+      </item>
+      <item row="3" column="3">
+       <property name="text">
+        <string>8.000</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLCDNumber" name="kontostand">
+      <property name="geometry">
+       <rect>
+        <x>840</x>
+        <y>170</y>
+        <width>211</width>
+        <height>50</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>890</x>
+        <y>110</y>
+        <width>101</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 0, 0);
+font: 16pt &quot;Segoe UI&quot;;
+background-color: transparent;
+</string>
+      </property>
+      <property name="text">
+       <string>Konto:</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QWidget" name="widget_4" native="true">
     <property name="geometry">
@@ -1180,7 +1180,7 @@ color: rgb(0, 170, 127);</string>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(64, 65, 66);</string>
     </property>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="loginButton">
      <property name="geometry">
       <rect>
        <x>1100</x>
@@ -1210,6 +1210,8 @@ color: rgb(0, 170, 127);</string>
      </property>
     </widget>
    </widget>
+   <zorder>widget_4</zorder>
+   <zorder>tabWidget</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
