--- a/client/crypto.ui
+++ b/client/crypto.ui
@@ -14,7 +14,7 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(85, 170, 127, 255), stop:1 rgba(64, 65, 66, 255));
+   <string notr="true">background-color: rgb(57, 116, 86);
 font: 14pt &quot;Segoe UI&quot;;</string>
   </property>
   <widget class="QGraphicsView" name="graphicsView">
