--- a/client/login.ui
+++ b/client/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>800</height>
+    <width>551</width>
+    <height>790</height>
    </rect>
   </property>
   <property name="sizeIncrement">
@@ -20,15 +20,15 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(176, 245, 178, 255), stop:0.197183 rgba(158, 246, 164, 255), stop:0.568075 rgba(103, 195, 92, 255), stop:1 rgba(64, 65, 66, 255));
-font: 14pt &quot;Segoe UI&quot;;
-color: rgb(0, 0, 0);
-file:///C:/Pictures/Bilder/Saved Pictures/Satchel on Twitter.png</string>
+   <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+background-color: rgb(57, 116, 86);
+color: rgb(255, 255, 255);
+</string>
   </property>
   <widget class="QLabel" name="LoginForm">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>190</x>
      <y>40</y>
      <width>211</width>
      <height>71</height>
@@ -45,7 +45,7 @@ background-color: transparent;</string>
   <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>160</x>
      <y>300</y>
      <width>250</width>
      <height>50</height>
@@ -55,7 +55,7 @@ background-color: transparent;</string>
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
+
 </string>
    </property>
    <property name="text">
@@ -65,7 +65,7 @@ color:black;
   <widget class="QLineEdit" name="lineEdit_password">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>160</x>
      <y>360</y>
      <width>250</width>
      <height>50</height>
@@ -83,15 +83,15 @@ color: rgb(255, 255, 255);</string>
   <widget class="QPushButton" name="Register">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>240</x>
      <y>690</y>
      <width>111</width>
      <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(64, 65, 66);
-color: rgb(89, 148, 83);</string>
+    <string notr="true">background-color: rgb(101, 202, 150);
+color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string> Register</string>
@@ -100,7 +100,7 @@ color: rgb(89, 148, 83);</string>
   <widget class="QLabel" name="username">
    <property name="geometry">
     <rect>
-     <x>480</x>
+     <x>170</x>
      <y>160</y>
      <width>250</width>
      <height>50</height>
@@ -110,7 +110,6 @@ color: rgb(89, 148, 83);</string>
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
 </string>
    </property>
    <property name="text">
@@ -123,15 +122,15 @@ color:black;
    </property>
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>240</x>
      <y>490</y>
      <width>100</width>
      <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(88, 145, 82);
-color: rgb(0, 0, 0);</string>
+    <string notr="true">background-color: rgb(64, 65, 66);
+color: rgb(108, 217, 161);</string>
    </property>
    <property name="text">
     <string>Login</string>
@@ -140,7 +139,7 @@ color: rgb(0, 0, 0);</string>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>460</x>
+     <x>150</x>
      <y>610</y>
      <width>331</width>
      <height>61</height>
@@ -150,7 +149,7 @@ color: rgb(0, 0, 0);</string>
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
+
 </string>
    </property>
    <property name="text">
@@ -160,7 +159,7 @@ color:black;
   <widget class="QLineEdit" name="lineEdit_password_2">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>160</x>
      <y>220</y>
      <width>250</width>
      <height>50</height>
@@ -172,7 +171,7 @@ font: 10pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);</string>
    </property>
    <property name="inputMethodHints">
-    <set>Qt::InputMethodHint::ImhNoAutoUppercase|Qt::InputMethodHint::ImhNoPredictiveText|Qt::InputMethodHint::ImhSensitiveData</set>
+    <set>Qt::InputMethodHint::ImhHiddenText|Qt::InputMethodHint::ImhNoAutoUppercase|Qt::InputMethodHint::ImhNoPredictiveText|Qt::InputMethodHint::ImhSensitiveData</set>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
