--- a/client/register.ui
+++ b/client/register.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>800</height>
+    <width>703</width>
+    <height>683</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -20,14 +20,16 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(176, 245, 178, 255), stop:0.197183 rgba(158, 246, 164, 255), stop:0.568075 rgba(103, 195, 92, 255), stop:1 rgba(64, 65, 66, 255));
-font: 14pt &quot;Segoe UI&quot;;
-color: rgb(0, 0, 0);</string>
+   <string notr="true">font: 14pt &quot;Segoe UI&quot;;
+background-color: rgb(57, 116, 86);
+color: rgb(255, 255, 255);
+
+</string>
   </property>
   <widget class="QLabel" name="Username">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>90</x>
      <y>210</y>
      <width>250</width>
      <height>50</height>
@@ -37,7 +39,7 @@ color: rgb(0, 0, 0);</string>
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
+
 </string>
    </property>
    <property name="text">
@@ -47,7 +49,7 @@ color:black;
   <widget class="QLabel" name="Email">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>90</x>
      <y>310</y>
      <width>250</width>
      <height>50</height>
@@ -57,7 +59,6 @@ color:black;
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
 </string>
    </property>
    <property name="text">
@@ -67,7 +68,7 @@ color:black;
   <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>90</x>
      <y>410</y>
      <width>250</width>
      <height>50</height>
@@ -77,7 +78,7 @@ color:black;
     <string notr="true">background-color: transparent;
 text-decoration: underline;
 font: 16pt &quot;Segoe UI&quot;;
-color:black;
+
 </string>
    </property>
    <property name="text">
@@ -87,15 +88,15 @@ color:black;
   <widget class="QPushButton" name="pushButton_register">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>510</y>
+     <x>270</x>
+     <y>520</y>
      <width>100</width>
      <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 220, 217);
-color: rgb(0, 0, 0);</string>
+    <string notr="true">background-color: rgb(64, 65, 66);
+color: rgb(108, 217, 161);</string>
    </property>
    <property name="text">
     <string>Register</string>
@@ -104,7 +105,7 @@ color: rgb(0, 0, 0);</string>
   <widget class="QLineEdit" name="lineEdit_username">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>360</x>
      <y>210</y>
      <width>250</width>
      <height>50</height>
@@ -122,7 +123,7 @@ color: rgb(255, 255, 255);</string>
   <widget class="QLineEdit" name="lineEdit_password">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>360</x>
      <y>410</y>
      <width>250</width>
      <height>50</height>
@@ -140,7 +141,7 @@ color: rgb(255, 255, 255);</string>
   <widget class="QLineEdit" name="lineEdit_email">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>360</x>
      <y>310</y>
      <width>250</width>
      <height>50</height>
@@ -155,50 +156,10 @@ color: rgb(255, 255, 255);</string>
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_to_login_2">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>690</y>
-     <width>100</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(88, 145, 82);
-color: rgb(0, 0, 0);</string>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>460</x>
-     <y>610</y>
-     <width>331</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: transparent;
-text-decoration: underline;
-font: 16pt &quot;Segoe UI&quot;;
-color:black;
-</string>
-   </property>
-   <property name="text">
-    <string>Du hast bereits ein Konto?</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="LoginForm">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>240</x>
      <y>40</y>
      <width>211</width>
      <height>71</height>
